# gelbooru-api

./: Cargo.toml  README.md
examples/: posts.rs  tags.rs
src/: api.rs  auth.rs  client.rs  error.rs  lib.rs  test.rs
