[package]
name = "gelbooru-api"
version = "0.3.1"
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
documentation = "https://docs.rs/gelbooru_api"
repository = "https://github.com/mibmo/gelbooru-api"
description = "API for the Gelbooru image board"

[dependencies]
chrono = "0.4"
http = "0.2"
hyper = "0.14"
hyper-rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
[[bin]]
name = "bin"
path = "src/bin.rs"
